--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </header>
     <main id="main" role="main">
       <!-- intro -->
-      <section id="intro">
+      <section id="intro" data-bg="#ddd">
         <p class="title">PORTFOLIO</p>
       </section>
       <!-- work -->
-      <section id="work">
+      <section id="work" data-bg="#fea58f">
         <div class="gird__box">
           <div class="item item1">
             <p class="item__title">WORK.</p>
@@ -64,7 +64,7 @@
         </div>
       </section>
       <!-- project -->
-      <section id="project">
+      <section id="project" data-bg="#85dd57">
         <div class="item item1">
           <p class="item__title">project.</p>
         </div>
@@ -75,10 +75,10 @@
         <div class="item item6"></div>
       </section>
       <!-- ux/ui -->
-      <section id="ux/ui"></section>
+      <section id="ux/ui" data-bg="#9aa25f"></section>
 
       <!-- about -->
-      <section id="about"></section>
+      <section id="about" data-bg="#4af1ba"></section>
     </main>
     <footer id="footer" role="contentinfo"></footer>
 
